# WinterFieldDayLogger

./: .gitignore  MASTER.SCP  README.md  bandmap.md  bandmap.py  cwmacros.txt  database.py  dialog.ui  linux.spec  lookup.py  main.ui  preferences.py  pyproject.toml  rebuild.sh  requirements.txt  server.py  server_database.db  server_preferences.json  settings.py  settings.ui  startup.ui  update_version.sh  version.py  wfd_preferences.json  wfdlogger.py  windows.spec
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: pull_request_template.md
data/: dialog.ui  main.ui  secname.json  secpartial.json  secstate.json  settings.ui  startup.ui  wfd_preferences.json
icon/: logo.blend
install_icon/: install.sh  uninstall.sh
lib/: cat_interface.py  database.py  lookup.py  n1mm.py  server_database.py  settings.py  version.py
testing/: simulant.py
wfdlogger/: README.md  __main__.py  pyproject.toml
wfdlogger/data/: dialog.ui  k6gte-wfdlogger.desktop  main.ui  secname.json  secstate.json
wfdlogger/icon/: logo.blend
wfdlogger/lib/: cat_interface.py  database.py  server_database.py  settings.py  version.py
